--- a/_quarto.yml
+++ b/_quarto.yml
@@ -12,26 +12,25 @@ book:
     style: floating
   chapters:
     - index.qmd
-    - 00-python-tips.qmd
-    - 01-scipy-numpy.qmd
-    - 02-statistical-simulation.qmd
-    - 03-exploratory-data-analysis.qmd
-    - 04-statistical-models.qmd
-    - 05-unbiased-estimators-efficiency.qmd
-    - 06-constructing-estimators.qmd
-    - 07-confidence-intervals.qmd
-    - 08-testing-hypotheses.qmd
-    - 09-testing-the-sample-mean.qmd
-    - 10-statistical-learning.qmd
-    - 11-basics-of-linear-regression.qmd
-    - 12-inference-for-linear-regression.qmd
-    - 13-anova.qmd
-    - 14-binary-regression.qmd
+    - site/00-python-tips.qmd
+    - site/01-scipy-numpy.qmd
+    - site/02-statistical-simulation.qmd
+    - site/03-exploratory-data-analysis.qmd
+    - site/04-statistical-models.qmd
+    - site/05-unbiased-estimators-efficiency.qmd
+    - site/06-constructing-estimators.qmd
+    - site/07-confidence-intervals.qmd
+    - site/08-testing-hypotheses.qmd
+    - site/09-testing-the-sample-mean.qmd
+    - site/10-statistical-learning.qmd
+    - site/11-basics-of-linear-regression.qmd
+    - site/12-inference-for-linear-regression.qmd
+    - site/14-binary-regression.qmd
 
 format:
   html:
-    theme: zephyr
-    highlight-style: nord
+    theme: simplex
+    highlight-style: atom-one
 
 editor: source
 execute:
